<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="preference_file_key">com.frisodenijs.tictactoe.USERSETTINGS</string>

    <string name="app_name">Tic Tac Toe</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">Opening</string>
    <string name="title_activity_game">Game</string>
    <string name="title_activity_main_menu">Main Menu</string>
    <string name="title_activity_end_menu">Game Finished</string>
    <string name="title_activity_settings">Settings</string>

    <string name="difficulty">Difficulty</string>
    <string name="easy_mode">Easy</string>
    <string name="hard_mode">Hard</string>

    <string name="zero_players">Zero Players</string>
    <string name="one_player">One Player</string>
    <string name="two_players">Two Players</string>

    <string name="win">Win</string>
    <string name="wins">Wins!</string>
    <string name="lose">Sorry, you lost.</string>
    <string name="draw">Draw</string>
    <string name="its_a_draw">It\'s a Draw!</string>

    <string name="restart">Restart</string>
    <string name="play_again">Play Again</string>
    <string name="invalid_move">Invalid Move</string>
    <string name="back_to_main">Main Menu</string>

    <string name="player">Player</string>
    <string name="players_names">Player Names</string>
    <string name="player_one">Player 1</string>
    <string name="player_two">Player 2</string>

    <string name="X">X</string>
    <string name="O">O</string>

    <string name="p1">P1</string>
    <string name="p2">P2</string>
    <string name="p1p2">P1/P2</string>

    <string name="save">Save</string>
    <string name="first_player">First Move</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="see_board">See board</string>

    <string name="testing">Testing</string>


</resources>
