<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.frisodenijs.tictactoe.MainMenuActivity">

    <Button
        android:id="@+id/onePlayerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="137dp"
        android:text="@string/one_player" />

    <Button
        android:id="@+id/twoPlayerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hardModeCheckBox"
        android:layout_centerHorizontal="true"
        android:text="@string/two_players" />

    <CheckBox
        android:id="@+id/hardModeCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/onePlayerButton"
        android:layout_centerHorizontal="true"
        android:text="@string/hard_mode" />

</RelativeLayout>
